# python-omfiles

./: CHANGELOG.md  Cargo.toml  pyproject.toml
.github/workflows/: release-please.yml
examples/: dask_larger_than_ram.py  readme_example.py  regrid_ecmwf_ifs_hres_gaussian_O1280_to_0.1_degree.py  regrid_subset_of_projected_domain.py  select_by_coordinates.py  spatial_xarray.py
python/omfiles/: __init__.py  __init__.pyi  dask.py  xarray.py
python/omfiles/_rust/: __init__.pyi
src/: writer.rs
tests/: test_fsspec.py  test_streaming_write.py  test_xarray.py
