[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "omfiles"
description = "Python bindings for the Open-Meteo file format"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
readme = "README.md"
license = "GPL-2.0-only"
authors = [
    { name = "Terraputix", email = "terraputix@mailbox.org" },
]
maintainers = [
    { name = "Terraputix", email = "terraputix@mailbox.org" },
]
dependencies = [
    "numpy>=1.21.0",
]

[project.urls]
Homepage = "https://github.com/open-meteo/python-omfiles"
Documentation = "https://open-meteo.github.io/python-omfiles/"
Source = "https://github.com/open-meteo/python-omfiles"
Tracker = "https://github.com/open-meteo/python-omfiles/issues"

[project.optional-dependencies]
codec = [
    "zarr>=2.18.2",
    "numcodecs>=0.12.1",
]
xarray = ["xarray>=2023.1.0"]
fsspec = ["fsspec>=2023.1.0", "s3fs>=2023.1.0"]
grids = ["pyproj>=3.1.0"]
dask = ["dask[array]>=2023.1.0"]
all = [
    "zarr>=2.18.2",
    "numcodecs>=0.12.1",
    "xarray>=2023.1.0",
    "fsspec>=2023.10.0",
    "s3fs>=2023.1.0",
    "pyproj>=3.3.0",
    "dask[array]>=2023.1.0",
]

[dependency-groups]
documentation = [
    "sphinx>=8.2.0",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-rtd-theme>=3.0.2",
    "myst-parser>=4.0"
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=1.1.0",
    "psutil>=6.0.0",
    "omfiles[all]",
]
dev = [
    "maturin>=1.7,<2.0",
    {include-group = "test"},
    {include-group = "documentation"},
]

[tool.maturin]
features = ["pyo3/extension-module"] # Define extension module in pyproject.toml instead of Cargo.toml to not mess with `cargo test`
python-source = "python"             # Python source code is in the `python` directory
module-name = "omfiles._rust"
sdist-include = ["LICENSE", "README.md"]

[tool.pyo3-stub-gen]
module = "_rust"

[tool.uv]
# Rebuild package when any rust files change
cache-keys = [{file = "pyproject.toml"}, {file = "rust/Cargo.toml"}, {file = "**/*.rs"}]
# Uncomment to build rust code in development mode
# config-settings = { build-args = '--profile=dev' }

[tool.uv.dependency-groups]
documentation = {requires-python = ">=3.11"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
unfixable = ["F401"]
# Add import sorting rules (I-prefixed rules)
extend-select = ["I"]
select = ["D"] # Enable all docstring-related rules
ignore = [
    "D200",
    "D203",
    "D204",
    "D212",
    "D413"
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]  # Ignore all docstring errors in tests/
"examples/*" = ["D"]  # Ignore all docstring errors in examples/

[project.entry-points."xarray.backends"]
om = "omfiles.xarray:OmXarrayEntrypoint"

[project.entry-points."zarr.codecs"]
"omfiles.pfor" = "omfiles._zarr3:PforCodec"
"omfiles.pfor_serializer" = "omfiles._zarr3:PforSerializer"
